JumpScript/tests/baselines/reference/parserInvalidIdentifiersInVariableStatements1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1.jump(1,5): error TS1134: Variable declaration expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1.jump(3,5): error TS1134: Variable declaration expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1.jump(3,10): error TS1005: '{' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1.jump (3 errors) ====
    var export;
        ~~~~~~
!!! error TS1134: Variable declaration expected.
    var foo;
    var class;
        ~~~~~
!!! error TS1134: Variable declaration expected.
             ~
!!! error TS1005: '{' expected.
    var bar;
    